# dshield

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  AWS_installation_guide.md  Architecture.md  Dockerfile  HARDWARE.md  README.md  README_AWS.md  README_AWS_Updated.md  README_Terraform.md  README_Ubuntu.md  README_cron.md  README_openSUSE.md  README_troubleshooting.md  SECURITY.md  STATUSERRORS.md  Ubuntu.md  docker-compose.yml  dockerfile  privacy.md  privacy.txt  signatures.xml
.github/: CODEOWNERS
.github/workflows/: isc-agent-action.yml  poetry-to-legacy.yml  snyk.yml
DB/: webserver.sqlite
docs/: README.md  ServerHeaders.md  logging.md
docs/dshield-architecture/: Architecture.md  Cron.md  Logging.md
docs/general-guides/: Hardware.md  LocalAdressLogging.md
docs/install-instructions/: AWS.md  Raspbian.md  Ubuntu.md  openSUSE.md  troubleshooting.md
etc/: PGPKEYS  cowrie.pp  cowrie1.pp  dshieldfw.service  hpotconfig.db  mini-httpd-admin.conf  mini-httpd.conf  openssl.cnf  openssl.template
html/: README.md  index.html  phpMyAdmin.html  robots.txt
mysql/: webserver.sql  webserver.sqlite
sigs/: responses.json  signaturemap.json
srv/isc-agent/: .bandit  .coveragerc  .gitignore  .pylintrc  DShield.py  Dockerfile  Makefile  Pipfile  README.MD  cert.pem  config.ini  conftest.py  db_builder.py  docker-compose.yml  example.settings.ini  isc-agent.py  key.pem  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.ini  settings.py  utils.py
srv/isc-agent/dashboard/: package-lock.json  package.json
srv/isc-agent/dashboard/src/: App.js
srv/isc-agent/dashboard/src/components/: DoughnutChart.js  LineChart.js  VerticalBarChart.js  WordCloudComponent.js  WordCloudComponent2.js  WorldMap.js
srv/isc-agent/dashboard/src/pages/: dashboard.js
srv/isc-agent/docs/: signature.sample  signatures.md
srv/isc-agent/plugins/tcp/http/: __init__.py  iscagent_submit.py  iscagentsubmit.py  main.py  models.py  schemas.py
srv/isc-agent/plugins/tcp/http/artifacts/: responses.json  signatures.json
srv/isc-agent/tests/: test_main.py
srv/isc-agent/tests/plugins/: test_temporary.py
srv/isc-agent/tests/plugins/tcp/http/: conftest.py  model_factories.py  test_main.py  test_models.py  test_schemas.py
terraform/: main.tf  output.tf  variables.tf
(+84 files in other folders)
