[tool.poetry]
name = "sans-isc-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sans_isc_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "~=3.0.3"
pydantic = {extras = ["dotenv", "email"], version = "~=1.9.0"}
requests = "~=2.27.1"
sqlalchemy = "~=1.4.31"
twisted = {extras = ["all_non_platform", "http2"], version = "~=22.10.0"}
defusedxml = "~=0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "*"
watchdog = "*"
pyyaml = "*"
pylint = "*"
bandit = "*"
coverage = "*"
factory-boy = "*"
markdown = "*"
tox = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"