[tool.poetry]
name = "sans-isc-agent"
version = "0.1.0"
readme = "README.md"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jinja2 = "~=3.0.3"
pydantic = {extras = ["email"], version = "~=1.9.0"}
requests = "~=2.27.1"
sqlalchemy = "~=1.4.31"
cryptography = "==3.4.6"
twisted = {extras = ["all_non_platform", "http2"], version = "~=22.10.0"}
defusedxml = "~=0.7.1"
python-dateutil="*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
watchdog = "*"
pyyaml = "*"
pylint = "*"
bandit = "*"
coverage = "*"
factory-boy = "*"
markdown = "*"
tox = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
